--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Aqui iria el titulo de la pagina</h1>
     <p>Esto es un párrafo</p>
+    <p>Esto es un segundo parrafo</p>
 </body>
 
 </html>
